--- a/procfile
+++ b/procfile
@@ -1,3 +1,4 @@
+web: python manage.py runserver 0.0.0.0:$PORT --noreload
 release : python manage.py migrate
 web : gunicorn technology_academy.wsgi --log-file -
 ps:scale web=1
